# noosphere

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  GAP-PLAN.md  HARDENING.md  LICENSE  README.md  RETRIEVAL_UPGRADE.md  SPEC.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: plugin-release.yml  test.yml
docs/: NEXT-SESSION.md  agent-media.md  capability-card-ui.md  l3-networked.md
docs/blog/: from-brokered-data-to-owned-knowledge.md
integrations/gbrain/: README.md  SUBMISSION.md  manifest-entry.json
noosphere/: __init__.py
noosphere/api/: __init__.py  llmstxt_router.py  main.py  og_router.py  routes.py
noosphere/cli/: __init__.py  __main__.py  main.py
noosphere/cloud/: LICENSE  __init__.py  auth.py  db.py  quota.py  stripe_connect.py
noosphere/core/: __init__.py  access.py  access_log.py  agent_payments.py  chat.py  chunker.py  citations.py  config.py  corpus.py  (+23 more)
plugin/: README.md  client.ts  esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  settings.ts  styles.css  tsconfig.json
tests/: conftest.py  test_access.py  test_agent_payments.py  test_api.py  test_api_extended.py  test_chunker.py  test_citations.py  test_cloud.py  test_corpus.py  test_export.py  test_gbrain_import.py  test_indexer.py  test_ingest.py  test_inter_kb.py  test_kb_agent.py  test_knowledge_growth.py  test_manifest_autofill.py  test_manifest_connector.py  test_mcp.py  test_payments.py  test_peer_subscriptions.py  test_registry.py  test_retrieval.py  test_sync.py  test_team.py  test_tokens.py
(+24 files in other folders)
