[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noosphere"
version = "0.1.0"
description = "Turn any knowledge base into an agent-readable corpus — arXiv for all knowledge, built for agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "AcademiAI"}]
keywords = ["knowledge", "agents", "mcp", "rag", "embeddings", "corpus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
noosphere = "noosphere.cli.main:main"

[project.urls]
Homepage = "https://github.com/AcademiAI/noosphere"
Repository = "https://github.com/AcademiAI/noosphere"

[tool.setuptools.packages.find]
include = ["noosphere*"]

[tool.setuptools.package-data]
"noosphere.api" = ["static/*"]
